tinggal dikit lagi

--- a/src/templates/emailTemplate.html
+++ b/src/templates/emailTemplate.html
@@ -7,17 +7,16 @@
     <title>Document</title>
     <style>
       .coba {
-        color: blue;
+        color: purple;
       }
     </style>
   </head>
   <body>
     <center>
-      <h1 class="coba">email Verifikasi</h1>
+      <h1 class="coba">Email Verification</h1>
     </center>
     <div>
-      halo, <span style="color: black; font-weight: 700">{{username}}</span> ini
-      link verifikasi : klik <a href="{{link}}">link </a>
+      halo, <span style="color: black; font-weight: 700">{{username}}</span> This Is Link verification : Please Click This Link To Verified Your Email <a href="{{link}}">link </a>
     </div>
   </body>
 </html>
